# fastapi-base

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  routes.py
app/auth/: route.py  service.py
app/core/: config.py  db.py  security.py
app/email_templates/src/: new_account.mjml
app/migrations/: env.py
app/migrations/versions/: c25680826291_initial_migration.py
app/user/: models.py  route.py  service.py
app/utils/: Emailhandler.py  deps.py  paginator.py
