[project]
name = "fastapi-base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "celery>=5.5.2",
    "emails>=0.6",
    "fastapi[standard]>=0.115.12",
    "jinja2>=3.1.6",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "pyjwt>=2.10.1",
    "redis>=6.1.0",
    "sentry-sdk>=2.28.0",
    "sqlmodel>=0.0.24",
    "tenacity>=9.1.2",
    "uvicorn[standard]>=0.34.2",
]
